--- a/css/less/lib.less
+++ b/css/less/lib.less
@@ -1,4 +1,7 @@
+@import "_reset.less";
 @import "_mixins.less";
-@import "variables.less";
+@import "_variables.less";
+@import "_grading_header.less";
 @import "circles.less";
 @import "chartwell.less";
+@import "rings.less";
