--- a/css/success_profile_detail_job_mock.css
+++ b/css/success_profile_detail_job_mock.css
@@ -1,3 +1,10 @@
+/* Font Declarations Begins */
+@font-face {
+    font-family: ProximaNova;
+    src: url(/fonts/33C8E4_2_0.woff2);
+}
+/* Font Declarations Ends */
+
 /* Top Menu Navbar CSS Begins */
 .navbar-top-menu {
     margin-top: 10px;
@@ -98,11 +105,12 @@
 /* Stats Row CSS Begins */
 .spdj-statrow {
     width: 100%;
-    min-height: 500px;
+    min-height:480px;
     float: left;
     margin-left: auto;
     margin-right: auto;
     background-color: #f9f9f9;
+    border: solid 1px red;
 }
 
 .spdj-statrow .statrow-header {
@@ -114,11 +122,12 @@
 
 .spdj-statrow .statrow-col-container {
     position: relative;
+    padding-top: 20px;
 }
 
 .spdj-statrow .statrow-col {
-    min-height: 360px;
-    width: 100%;
+    min-height: 380px;
+    width: 30%; 
     padding: 20px;
     background-color: #ffffff;
     border: solid 1px lightgray; 
@@ -138,25 +147,89 @@
     border-top: solid 7px #578f3f;
 }
 
-@media only screen and (min-width: 780px) {
-    .spdj-statrow .statrow-col {
-        width: 30%;
-        margin: 20px;
-    }
-
+/* Large desktops and laptops */
+@media (min-width: 1200px) {
+    /* Adjust the three stats columns for Job Characteristics, Values & Culture and Organization policy Begins */
     .spdj-statrow .statrow-col:nth-child(1) {
         position: absolute;
-        left: 1%;
+        left: 2%;
     }
 
     .spdj-statrow .statrow-col:nth-child(2) {
         position: absolute;
-        left: 33.3%;
+        left: 34.5%;
     }
 
     .spdj-statrow .statrow-col:nth-child(3) {
         position: absolute;
-        left: 65.5%;
+        left: 67.5%;
+    }
+    /* Adjust the three stats columns for Job Characteristics, Values & Culture and Organization policy Ends */
+}
+
+/* Landscape tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+    .spdj-statrow {
+        min-height: 480px;
+    }
+
+    .spdj-statrow .statrow-col {
+        min-height: 390px;
+    }
+
+    /* Adjust the three stats columns for Job Characteristics, Values & Culture and Organization policy Begins */
+    .spdj-statrow .statrow-col:nth-child(1) {
+        position: absolute;
+        left: 2.5%;
+    }
+
+    .spdj-statrow .statrow-col:nth-child(2) {
+        position: absolute;
+        left: 35%;
+    }
+
+    .spdj-statrow .statrow-col:nth-child(3) {
+        position: absolute;
+        left: 67.5%;
+    }
+    /* Adjust the three stats columns for Job Characteristics, Values & Culture and Organization policy Ends */
+}
+
+/* Portrait tablets and small desktops */
+@media (min-width: 480px) and (max-width: 991px) {
+    /* When the screen size is this small, simulate container-fluid by removing the margins and padding */
+    .container {
+        margin: 0;
+        padding: 0;
+    }
+
+    .spdj-statrow {
+        width: 100%;
+        height: 1250px;
+    }
+
+    .spdj-statrow .statrow-col {
+        width: 100%; /* At this screen resolution, the columns should occupy the entire width of the container */
+        height: 300px;
+    }
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 480px) {
+    /* When the screen size is this small, simulate container-fluid by removing the margins and padding */
+    .container {
+        margin: 0;
+        padding: 0;
+    }
+
+    .spdj-statrow {
+        width: 100%;
+        height: 1280px;
+    }
+
+    .spdj-statrow .statrow-col {
+        width: 100%; /* At this screen resolution, the columns should occupy the entire width of the container */
+        height: 300px;
     }
 }
 
@@ -172,7 +245,7 @@
 
 .spdj-statrow .statrow-col-jc-container {
     border-bottom: dotted 1px #979797;
-    margin: 5px;
+    margin: 10px;
     padding: 10px 10px 0px 10px;
 }
 
@@ -196,8 +269,7 @@
 .spdj-statrow .statrow-col-jc-content {
     display: inline-block;
     width: 100%;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin: 7px 0;
     font-family: ProximaNova;
     font-size: 15px;
     text-align: left;
@@ -236,11 +308,12 @@
     display: block;
     float: left;
     width: 80%;
-    margin: 5px 20px;
+    margin: 15px 20px;
 }
 
 .spdj-statrow .statrow-col-vc-text {
     display: block;
+    width: 80%;
     float: left;
     font-family: ProximaNova;
     font-size: 15px;
@@ -294,9 +367,50 @@
     display: block;
     float: right;
 }
-
-
 /* Stats Row CSS Ends */
+
+/* Tabs Row CSS Begins */
+.spdj-tabsrow {
+    width: 100%;
+    float: left;
+    margin: auto;
+    background-color: #ffffff;
+}
+
+.spdj-tabsrow ul {
+    list-style-type: none;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    overflow: hidden;
+    text-align: center;
+border: solid 1px red;
+}
+
+.spdj-tabsrow ul li {
+    display: inline-block;
+    width: 170px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+    border: solid 1px blue;
+}
+
+.spdj-tabsrow ul li a {
+    font-family: ProximaNova;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 0.3px;
+    color: #027ca3;
+    text-decoration: none;
+    display: block;
+    padding: 8px;
+}
+
+.spdj-tabsrow ul li a:hover {
+    border-bottom: solid 2px #027ca3;
+}
+/* Tabs Row CSS Ends */
 
 .dummy {
     margin: 100px;
