--- a/css/success_profile_detail_job_mock.css
+++ b/css/success_profile_detail_job_mock.css
@@ -6,8 +6,12 @@
 /* Font Declarations Ends */
 
 /* Top Menu Navbar CSS Begins */
+.navbar-container {
+    width: 100%;
+    height: 60px;
+}
+
 .navbar-top-menu {
-    margin-top: 10px;
     background-color: white;
 }
 
@@ -110,7 +114,6 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #f9f9f9;
-    border: solid 1px red;
 }
 
 .spdj-statrow .statrow-header {
@@ -379,12 +382,12 @@
 
 .spdj-tabsrow ul {
     list-style-type: none;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     padding: 20px;
     overflow: hidden;
     text-align: center;
-border: solid 1px red;
+    background-color: #ffffff;
 }
 
 .spdj-tabsrow ul li {
@@ -393,7 +396,6 @@ border: solid 1px red;
     text-align: center;
     margin-left: 20px;
     margin-right: 20px;
-    border: solid 1px blue;
 }
 
 .spdj-tabsrow ul li a {
@@ -405,11 +407,229 @@ border: solid 1px red;
     text-decoration: none;
     display: block;
     padding: 8px;
+    border-bottom: solid 2px transparent;
 }
 
 .spdj-tabsrow ul li a:hover {
     border-bottom: solid 2px #027ca3;
 }
+
+.spdj-tabsrow .affix {
+    top: 50px;
+    left: 0px;
+    width: 100%;
+}
+
+@media (max-width: 1023px) { /* Do not allow the tabs to be affixed for screens smaller than 1024 width */
+    .spdj-tabsrow .affix {
+        position: static;
+    }
+}
+
+.spdj-main-row {
+    width: 100%;
+    margin: 0 auto;
+    background-color: #f9f9f9;
+}
+
+.spdj-main-row .spdj-side-nav-container {
+    float:left;
+    width: 25%;
+    height: 500px;
+    background-color: #f9f9f9;
+}
+
+.spdj-main-row .spdj-side-nav {
+    float: left;
+    width: 285px;
+    min-height: 400px;
+    background-color: #f9f9f9;
+}
+
+.spdj-main-row .spdj-side-nav.affix {
+    top: 128px;
+}
+
+@media (max-width: 1023px) { /* Do not allow the tabs to be affixed for screens smaller than 1024 width */
+    .spdj-main-row .spdj-side-nav.affix {
+        position: static;
+    }
+}
+
+.spdj-main-row .spdj-side-nav-container {
+    margin: 20px 0;
+    float: left;
+}
+
+.spdj-main-row > .spdj-side-nav {
+    width: 100%;
+    float: left;
+}
+
+.spdj-main-row .spdj-side-nav-menu {
+    display: block;
+    width: 100%;
+    padding: 10px 30px;
+    text-align: left;
+    font-family: ProximaNova;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.spdj-main-row .spdj-side-nav-menu > a {
+    color: #343434;
+}
+
+.spdj-main-row .spdj-side-nav-title {
+    margin-top: 20px;
+    font-weight: 600;
+    line-height: 1.57;
+    letter-spacing: 0.6px;
+    color: #000000;
+}
+
+.spdj-main-row .spdj-side-nav-title-active {
+    background-color: #015870;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: white;
+}
+
+.spdj-main-row .spdj-side-nav-menu-selected a {
+    color: #015870;
+    font-weight: 600;
+}
+
+.spdj-main-row .spdj-main-container {
+    float: left;
+    padding: 5px;
+    width: 75%;
+    background-color: #f9f9f9;
+}
+
+.spdj-main-row .spdj-main-jr-card {
+    width: 100%;
+    float: left;
+    padding: 20px;
+    border: solid 1px lightgray;
+    box-shadow: 1px 2px 5px #888888;
+    background-color: #ffffff;
+}
+
+.spdj-main-row .spdj-main-jr-title {
+    width: 320px;
+    height: 29px;
+    margin-bottom: 10px;
+    font-family: ProximaNova;
+    font-size: 24px;
+    letter-spacing: 0.9px;
+    text-align: left;
+    color: #000000;
+}
+
+.spdj-main-row .spdj-main-jr-desc {
+    width: 625px;
+    height: 18px;
+    font-family: ProximaNova;
+    font-size: 15px;
+    text-align: left;
+    color: #898989;
+}
+
+.spdj-main-row .spdj-main-jr-stats-container {
+    width: 100%;
+    float: left;
+}
+
+.spdj-main-row .spdj-main-jr-chart {
+    width: 50%;
+    min-height: 350px;
+    padding: 10px;
+    float: left;
+    border-right: dotted 1px #979797;
+    border-bottom: dotted 1px #979797;
+}
+
+.spdj-main-row .spdj-main-jr-bcomp {
+    width: 50%;
+    min-height: 350px;
+    padding: 10px;
+    float: left;
+    border-bottom: dotted 1px #979797;
+}
+
+.spdj-main-row .spdj-main-jr-reqsnap {
+    width: 100%;
+    float: left;
+}
+
+.spdj-main-row .spdj-main-reqsnap-title, .spdj-main-jr-chart-title, .spdj-main-jr-bcomp-title {
+    display: block;
+    width: 100%;
+    margin: 10px 0;
+    font-family: ProximaNova;
+    font-size: 16px;
+    letter-spacing: 1.1px;
+    text-align: left;
+    color: #6b6b6b;
+}
+
+.spdj-main-row .spdj-main-bcomp-stat-container {
+    display: block;
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    border: solid 1px lightgray;
+    border-radius: 200px;
+}
+
+.spdj-main-row .spdj-main-bcomp-stat {
+    display: block;
+    font-family: ProximaNova;
+    font-size: 72px;
+    font-weight: 300;
+    letter-spacing: 1.1px;
+    text-align: center;
+    color: #d4d4d4;
+}
+
+.spdj-main-row .spdj-main-bcomp-title {
+    display: block;
+    font-family: ProximaNova;
+    font-size: 24px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    text-align: center;
+    color: #008a95;
+}
+
+.spdj-main-row .spdj-main-bcomp-item {
+    display: block;
+    width: 60%;
+    margin: 5px auto;
+}
+
+.spdj-main-row .spdjmain-bcomp-icon {
+    color: #EBB30D;    
+}
+
+.spdj-main-row .spdj-main-reqsnap-det {
+    display: block;
+    width: 50%;
+    float: left;
+    padding: 10px;
+}
+
+.spdj-main-row .spdj-main-respon-card {
+    width: 100%;
+    margin-top: 30px;
+    float: left;
+    padding: 20px;
+    border: solid 1px lightgray;
+    box-shadow: 1px 2px 5px #888888;
+    background-color: #ffffff;
+}
+
 /* Tabs Row CSS Ends */
 
 .dummy {
