--- a/css/success_profile_detail_job_mock.css
+++ b/css/success_profile_detail_job_mock.css
@@ -749,6 +749,7 @@
 }
 /* Responsibilities Card CSS Ends */
 
+/* Behavioral Competencies Card CSS Begins */
 .spdj-main-row .spdj-main-bcomp-card {
     width: 100%;
     margin-top: 30px;
@@ -838,6 +839,99 @@
     text-align: right;
     color: #929292;
 }
+/* Behavioral Competencies Card CSS Ends */
+
+/* Technical Competencies Card CSS Begins */
+.spdj-main-row .spdj-main-tech-card {
+    width: 100%;
+    margin-top: 30px;
+    float: left;
+    padding: 20px;
+    border: solid 1px lightgray;
+    box-shadow: 1px 2px 5px #888888;
+    background-color: #ffffff;
+}
+
+.spdj-main-row .spdj-main-tech-title {
+    display: block;
+    width: 80%;
+    float: left;
+    font-family: ProximaNova;
+    font-size: 24px;
+    letter-spacing: 0.9px;
+    text-align: left;
+    color: #000000;
+}
+
+.spdj-main-row .spdj-main-tech-help {
+    font-size: 15px;
+}
+
+.spdj-main-row .spdj-main-tech-title-container {
+    width: 100%;
+    float: left;
+}
+
+.spdj-main-row .spdj-main-tech-lvl-title {
+    display: block;
+    width: 20%;
+    float: left;
+    margin-top: 8px;
+    padding-left: 20px;
+    font-family: ProximaNova;
+    font-size: 13px;
+    font-weight: bold;
+    letter-spacing: 0.2px;
+    text-align: left;
+    color: #a6a6a6;
+}
+
+.spdj-main-row .spdj-main-tech-item-container {
+    width: 100%;
+    float: left;
+    margin-top: 10px;
+    padding-top: 10px;
+    border-top: dotted 1px lightgray;
+}
+
+.spdj-main-row .spdj-main-tech-item-text-container {
+    width: 80%;
+    float: left;
+}
+
+.spdj-main-row .spdj-main-tech-item-title {
+    display: block;
+    margin: 10px 0;
+    font-family: ProximaNova;
+    font-size: 15px;
+    font-weight: 600;
+    text-align: left;
+    color: #027ca3;
+}
+
+.spdj-main-row .spdj-main-tech-item-icon {
+    color: #EBB30D;   
+}
+
+.spdj-main-row .spdj-main-tech-item-detail {
+    font-family: ProximaNova;
+    font-size: 15px;
+    text-align: left;
+    color: #898989;
+}
+
+.spdj-main-row .spdj-main-tech-item-chart {
+    margin-top: 20px;
+}
+
+.spdj-main-row .spdj-main-tech-item-stat {
+    font-family: ProximaNova;
+    font-size: 14px;
+    font-weight: 300;
+    text-align: right;
+    color: #929292;
+}
+/* Technical Competencies Card CSS Ends */
 
 /* Main Cards Rows CSS Ends */
 
